--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,27 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 20px;
+}
+
+.row-1 {
+  display: flex;
+  padding: 0 15px 0 0;
+}
+
+.row-2 {
+  display: flex;
+  flex-direction: column;
+}
+.row-3 {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons {
+  display: inline;
+  padding: 10px 0 10px 0;
 }
 
 .icon {
@@ -33,6 +54,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.header {
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 0 0 10px 0;
 }
 
 .close-button {
@@ -51,6 +78,8 @@ body {
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  width: 100px;
+  display: inline;
 }
 
 button.continue {
@@ -63,4 +92,5 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  
 }
